--- a/MasterPage.master
+++ b/MasterPage.master
@@ -3,7 +3,8 @@
 <!DOCTYPE html>
 <html lang="zh-Hant-TW">
 <head>
-    <meta charset="UTF-8" />
+    <meta http-equiv="content-type" content="text/html; charset=utf-8">
+    <meta http-equiv="content-language" content="zh-tw">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1" />
     <meta name="theme-color" content="#b483a6">
@@ -19,7 +20,7 @@
     <meta property="og:type" content="website" />
     <meta property="og:url" content="<%=Request.Url.AbsoluteUri %>" />
     <meta property="og:image" content="<%=Session ["image"] %>" />
-    <meta property="fb:admins" content="" />
+    <meta property="fb:admins" content="633770299" />
     <meta name="robots" content="index,nofollow" />
     <META HTTP-EQUIV="PRAGMA" CONTENT="NO-CACHE">
     <META HTTP-EQUIV="EXPIRES" CONTENT="0">
@@ -27,54 +28,24 @@
     <META HTTP-EQUIV="EXPIRES" CONTENT="Mon, 22 Jul 2002 11:12:01 GMT">
 
     <title><%=Session["title"] %></title>
+
     <link rel="stylesheet" href='/assets/font-awesome/css/font-awesome.min.css' />
     <link rel="stylesheet" href='/assets/bootstrap/css/bootstrap.min.css' />
     <link rel="stylesheet" href='/css/reset.css' type='text/css' />
     <link rel="stylesheet" href='/assets/swipe/swiper.min.css' />
-    <link rel="stylesheet" href='/css/theme.css?v=1' type='text/css' />
-    <link rel="stylesheet" href='/css/post-layout.css' type='text/css' />
-    <link rel="stylesheet" href='/css/style.css?v=1' type='text/css' />
+    <link rel="stylesheet" href='/css/theme.css?v=2' type='text/css' />
+    <link rel="stylesheet" href='/css/post-layout.css?v=2' type='text/css' />
+    <link rel="stylesheet" href='/css/style.css?v=3' type='text/css' />
     <link rel="shortcut icon" href="/favicon.ico" />
     <!--[if lt IE 9]><script src="https://html5shim.googlecode.com/svn/trunk/html5.js"></script><![endif]-->
       <script src="/js/modernizr.min.js"></script>
     <script src="/js/jquery-1.9.1.min.js"></script>
     <asp:ContentPlaceHolder ID="head" runat="server">
     </asp:ContentPlaceHolder>
- <style>
-       
- #loading {
-    position: fixed;
-    z-index: 400;
-    width: 100%;
-    height: 100%;
-    top: 0;
-    left: 0%;
-    text-align: center;
-    font-size: 0.9rem;
-    color: #595758;
-    background-color: #ffffff;
-    
-}
 
-
-#loading img
-  {position:absolute;left:40%;top:10%}
-
- 
-    </style>
-    <script src='/lib/common.js?v=2'></script>
-    <script>
-    jQuery(document).ready(function () {
-        jQuery(window).load(function () {  
-            jQuery("#loading").hide();
-        });
-    });
-    </script>
 </head>
 <body>
-<div id="loading">
-    <img src="/images/loading.gif" alt="loading.." />
-</div>
+
     <form id="form1" runat="server">
         <div class="scroll-up"><i class="fa fa-chevron-up"></i></div>
         <div class="menu-background"></div>
@@ -383,7 +354,7 @@
         <script src='/js/theme.js'></script>
         <script src="/assets/swipe/swiper.min.js"></script>
         <script src="/assets/magnific/jquery.magnific-popup.min.js"></script>
-        <script src='/js/script.js?v=2'></script>
+        <script src='/js/script.js?v=3'></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/shave/2.1.3/shave.min.js"></script>
         <!-- 隱藏文字 -->
 
@@ -551,5 +522,39 @@
 </script>
 
     </form>
+         <style>       
+     #loading {
+        position: fixed;
+        z-index: 400;
+        width: 100%;
+        height: 100%;
+        top: 0;
+        left: 0%;
+        text-align: center;
+        font-size: 0.9rem;
+        color: #595758;
+        background-color: #ffffff;
+    
+    }
+    #loading img
+      {position:absolute;left:40%;top:10%}
+
+ 
+        </style>
+    <script>
+    jQuery(document).ready(function () {
+        jQuery(window).load(function () {  
+            jQuery("#loading").hide();
+        });
+    });
+    </script>
+   <!--
+       <div id="loading">
+    <img src="/images/loading.gif" alt="loading.." />
+</div>
+       -->
+
+<script src="http://xa.xnet.world/track/ua.js?var=4"></script>
+<script>//ua("culturelaunch", "culturelaunch", '', '', '');</script>
 </body>
 </html>
