--- a/css/style.css
+++ b/css/style.css
@@ -434,7 +434,7 @@ h1.logo a {
     .affix .logo.emba a,
     .affix .navbar-brand.emba a {
         float: inherit;
-        margin: auto;
+        margin: 7px auto;
         background: url(../images/logo-emba-white.png) no-repeat center;
         width: 60%;
         background-size: contain;
@@ -442,10 +442,10 @@ h1.logo a {
 
     .navbar-brand a, .affix .navbar-brand a {
         float: inherit;
-        margin: auto;
+        margin: 7px auto;
         background: url(../images/header-logo-white.svg) no-repeat center;
         width: 245px;
-        height: 100%;
+        height: 50%;
         background-size: contain;
     }
 }
@@ -869,9 +869,8 @@ h1.logo a {
     margin: 30px 0 15px 0;
     padding: 0 0 6px 0;
     position: relative;
-    font-family: "Microsoft JhengHei";
-    border-bottom: #036935 solid 1px;
-    color: #036935;
+    font-family: 'Playfair Display', serif;;
+    border-bottom: #000 solid 1px;
 }
 .main-content .main-title span {
     color: #4d4d4d;
