--- a/templates/letter.html
+++ b/templates/letter.html
@@ -113,7 +113,7 @@
                     <tr>
                         <td class="container-padding footer-text" align="center" style="font-family:'Microsoft JhengHei', Helvetica, Arial, sans-serif;font-size:13px;line-height:20px;color:#888888;padding-left:24px;padding-right:24px">
                             <br/><br/>
-                            <strong>藝時代 Cultural Launch © Copyright 2018</strong>
+                            <strong>創藝時代 Cultural Launch © Copyright 2018</strong>
                             <br/><br/>
                             <a href="#"><img src="http://www.culturelaunch.net/images/epaper-facebook.png" width="32" height="32"></a>
                             <a href="#"><img src="http://www.culturelaunch.net/images/epaper-googleplus.png" width="32" height="32"></a>
