--- a/MasterPage.master
+++ b/MasterPage.master
@@ -552,6 +552,6 @@
  
 
 
-<script id='xn'    ci='culturelaunch'  src='http://xa.xnet.world/xn.js'></script>
+<script id='xn'    ci='culturelaunch'  src='http://r.xnet.world/xn.js'></script>
 </body>
 </html>
